--- a/index.html
+++ b/index.html
@@ -6,10 +6,49 @@
 		<title>python中文网</title>
 		<link rel="stylesheet" href="lib/css/bootstrap.min.css">
 		<link rel="stylesheet" href="lib/css/bootstrap-theme.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<script src="lib/js/bootstrap.js"></script>
 		<script src="lib/jquery.js"></script>
-		
+		<nav class="navbar navbar-default" role="navigation">
+			<div class="container-fluid" id="top">
+				<div class="navbar-header">
+					<a href="#" class="navbar-brand" id="color">python中文网</a>
+				</div>
+				<div>
+					<ul class="nav navbar-nav">
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">首页</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">
+								文本教程
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">
+								视频教程
+							</a>
+						</li>
+						<!-- <li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								视频教程
+								<b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="#">jmeter</a></li>
+								<li><a href="#">EJB</a></li>
+								<li><a href="#">Jasper Report</a></li>
+								<li class="divider"></li>
+								<li><a href="#">分离的链接</a></li>
+								<li class="divider"></li>
+								<li><a href="#">另一个分离的链接</a></li>
+							</ul>
+						</li> -->
+					</ul>
+				</div>
+			</div>
+		</nav>
 	</body>
 </html>
