完成导航栏但未加入链接，添加主面板（有bug未修复）

--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
 	<body>
 		<script src="lib/js/bootstrap.js"></script>
 		<script src="lib/jquery.js"></script>
-		<nav class="navbar navbar-default" role="navigation">
+		<nav class="navbar navbar-inverse" role="navigation">
 			<div class="container-fluid" id="top">
+				<!-- TODO: 添加链接 -->
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand" id="color">python中文网</a>
+					<img src="img/python (2).jpg" width="50" height="50"/>
+					&nbsp;
+				</div>
+				<div class="navbar-header">
+					
+					<a href="./index.html" class="navbar-brand" id="color">python中文网</a>
 				</div>
 				<div>
 					<ul class="nav navbar-nav">
 						<li class="color">
-							<a href="#" style="color:#FFFFFF">首页</a>
+							
+							<a href="./index.html" style="color:#FFFFFF">首页</a>
 						</li>
 						<li class="color">
 							<a href="#" style="color:#FFFFFF">
@@ -29,6 +36,21 @@
 						<li class="color">
 							<a href="#" style="color:#FFFFFF">
 								视频教程
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">
+								社区问答
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">
+								中文文档
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color: #FFFFFF;">
+								工具下载
 							</a>
 						</li>
 						<!-- <li class="dropdown">
@@ -47,8 +69,15 @@
 							</ul>
 						</li> -->
 					</ul>
+					<ul class="nav navbar-nav navbar-right"> 
+						<li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li> 
+						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li> 
+					</ul>
 				</div>
 			</div>
 		</nav>
+		<div class="pla">
+			
+		</div>
 	</body>
 </html>
