--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<body>
 		<script src="lib/js/bootstrap.js"></script>
 		<script src="lib/jquery.js"></script>
+		<nav class="navbar navbar-default" role="navigation">
+			<div class="container-fluid" id="top">
+				<div class="navbar-header">
+					<a href="#" class="navbar-brand" id="color">python中文网</a>
 		<nav class="navbar navbar-inverse" role="navigation">
 			<div class="container-fluid" id="top">
 				<!-- TODO: 添加链接 -->
@@ -25,6 +29,7 @@
 				<div>
 					<ul class="nav navbar-nav">
 						<li class="color">
+							<a href="#" style="color:#FFFFFF">首页</a>
 							
 							<a href="./index.html" style="color:#FFFFFF">首页</a>
 						</li>
@@ -69,6 +74,9 @@
 							</ul>
 						</li> -->
 					</ul>
+				</div>
+			</div>
+		</nav>
 					<ul class="nav navbar-nav navbar-right"> 
 						<li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li> 
 						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li> 
