--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 		<script src="lib/js/bootstrap.js"></script>
 		<script src="lib/jquery.js"></script>
 		<nav class="navbar navbar-default" role="navigation">
+			
 			<div class="container-fluid" id="top">
 				<div class="navbar-header">
+					<img src="img/python.png" width="50" height="50">
+					&nabla;
+				</div>
+				<div class="navbar-header">
+					
 					<a href="#" class="navbar-brand" id="color">python中文网</a>
 				</div>
 				<div>
@@ -23,7 +29,7 @@
 						</li>
 						<li class="color">
 							<a href="#" style="color:#FFFFFF">
-								文本教程
+								中文文档
 							</a>
 						</li>
 						<li class="color">
@@ -31,6 +37,27 @@
 								视频教程
 							</a>
 						</li>
+						<li class="color">
+							<a href="#" style="color: #FFFFFF;">
+								社区问答
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">
+								资源下载
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color:#FFFFFF">
+								工具下载
+							</a>
+						</li>
+						<li class="color">
+							<a href="#" style="color: #FFFFFF;">
+								白嫖工具
+							</a>
+						</li>
+						
 						<!-- <li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								视频教程
