--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<a href="#" style="color:#FFFFFF">首页</a>
 						</li>
 						<li class="color">
-							<a href="#" style="color:#FFFFFF">
+							<a href="https://docs.python.org/zh-cn/3/" style="color:#FFFFFF">
 								中文文档
 							</a>
 						</li>
@@ -77,5 +77,112 @@
 				</div>
 			</div>
 		</nav>
+		<div class="slideshow">
+		    <div class="btn">
+		        <span class="last-img">&lt;</span><span class="next-img">&gt;</span>
+		    </div>
+		    <div class="ra-show">
+		        <i class="active">1</i>
+		        <i>2</i>
+		        <i>3</i>
+		        <i>4</i>
+		        <i>5</i>
+		    </div>
+		    <ul>
+		        <li style="display: block;">
+		            <a href="#"><img src="#" width="100%" hight="400"/></a>
+		        </li>
+		        <li>
+		            <a href="#"><img src="#" width="100%" hight="400"/></a>
+		        </li>
+		        <li>
+		            <a href="#"><img src="#" width="100%" hight="400"/></a>
+		        </li>
+		        <li>
+		            <a href="#"><img src="#" width="100%" hight="400"/></a>
+		        </li>
+		        <li>
+		            <a href="#"><img src="#" width="100%" hight="400"/></a>
+		        </li>
+		    </ul>
+		</div>
+		<script type="text/javascript">
+		    //声明一个变量，下面的时候通过算术方法改变变量的值
+		    var current = 0;
+		    //初始化数据
+		    var timer = null;
+		    var pre = null;
+		    var nex = null;
+		    $(document).ready(function() {
+		        var li_v = $('.slideshow ul li');
+		        var i_v = $('.ra-show i');
+		        //设置自动播放
+		        function mover() {
+		            //首先清除当前current以外的li_v的样式显示和伪圆标i_v的效果, 以下的同上
+		            li_v.hide();
+		            //                i_v.eq(current).removeClass("active");
+		            i_v.removeClass("active");
+		            current = (current + 1) % (li_v.length);
+		            console.log(current);
+		            //当鼠标放在伪圆标时候获取当前的索引值，并把它赋给current从而实现了移出鼠标的时候跳转到下一个图片轮播
+		            i_v.mouseover(function() {
+		                current = $(this).index();
+		                //                    console.log($(this).index());
+		            });
+		            //当鼠标放在伪圆标时候获取当前的索引值，并把它赋给current从而实现下一个图片轮播
+		            li_v.eq(current).fadeIn(1000);
+		            i_v.eq(current).addClass("active");
+		        };
+		        //设置自动轮播
+		        timer = setInterval(mover, 2000);
+		        //鼠标划入的时候停止轮播
+		        li_v.mouseover(function() {
+		            clearInterval(timer);
+		        });
+		        //鼠标移出的时候继续轮播
+		        li_v.mouseout(function() {
+		            timer = setInterval(mover, 2000);
+		        });
+		        //实现左右按钮事件
+		        //点击左按钮事件
+		        $(".last-img").click(function() {
+		            //    首先清除定时器
+		            clearInterval(timer);
+		            clearInterval(pre);
+		            //实现点击按钮显示上一个图片代码
+		            function last_v() {
+		                li_v.hide();
+		                i_v.removeClass("active");
+		                current = (current - 1 + li_v.length) % (li_v.length);
+		                //console.log(current);
+		                li_v.eq(current).fadeIn(1000);
+		                i_v.eq(current).addClass("active");
+		            };
+		            pre = setTimeout(last_v, 10);
+		            timer = setInterval(mover, 2000);
+		        });
+		        //点击右按钮事件
+		        //只需继续轮播就可以
+		        $(".next-img").click(function() {
+		            //    首先清除定时器
+		            clearInterval(timer);
+		            clearInterval(nex);
+		            //console.log(current);
+		            //调用自动轮播的代码和点击上一张图片代码的setTimeout
+		            nex = setTimeout(mover, 10);
+		            timer = setInterval(mover, 2000);
+		        });
+		        //添加伪类下标圆标动事件
+		        //鼠标碰到伪圆标的时候显示所对应的图片并且停止页面。
+		        i_v.mouseover(function() {
+		            clearInterval(timer);
+		            i_v.removeClass("active");
+		            li_v.hide();
+		            li_v.eq($(this).index()).fadeIn(1000);
+		            $(this).addClass("active");
+		            //console.log($(this).index());
+		        });
+		    });
+		</script>
 	</body>
 </html>
