添加幻灯片效果

--- a/index.html
+++ b/index.html
@@ -82,18 +82,18 @@
 		        <span class="last-img">&lt;</span><span class="next-img">&gt;</span>
 		    </div>
 		    <div class="ra-show">
-		        <i class="active">1</i>
-		        <i>2</i>
-		        <i>3</i>
-		        <i>4</i>
-		        <i>5</i>
+		        <i class="active"></i>
+		        <i></i>
+		        <i></i>
+		        <i></i>
+		        <i></i>
 		    </div>
 		    <ul>
 		        <li style="display: block;">
 		            <a href="#"><img src="#" width="100%" hight="400"/></a>
 		        </li>
 		        <li>
-		            <a href="#"><img src="#" width="100%" hight="400"/></a>
+		            <a href="#"><img src="img/python_shell.png" width="100%" hight="400"/></a>
 		        </li>
 		        <li>
 		            <a href="#"><img src="#" width="100%" hight="400"/></a>
